--- a/boj_1302.ipynb
+++ b/boj_1302.ipynb
@@ -255,29 +255,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'icecream': 2, 'peanuts': 2, 'chocolate': 2, 'candy': 1, 'apple': 1}\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "ord() expected a character, but string of length 8 found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1302.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X14sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         book_dict[name] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X14sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(book_dict)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X14sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m sorted_book_count_name \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39;49m(book_dict\u001b[39m.\u001b[39;49mitems(), key\u001b[39m=\u001b[39;49m\u001b[39mlambda\u001b[39;49;00m x : (x[\u001b[39m1\u001b[39;49m], \u001b[39m-\u001b[39;49m\u001b[39mord\u001b[39;49m(x[\u001b[39m0\u001b[39;49m])))\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X14sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(sorted_book_count_name)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X14sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(sorted_book_count_name[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m])\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1302.ipynb Cell 9\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X14sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         book_dict[name] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X14sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(book_dict)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X14sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m sorted_book_count_name \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39m(book_dict\u001b[39m.\u001b[39mitems(), key\u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m x : (x[\u001b[39m1\u001b[39m], \u001b[39m-\u001b[39m\u001b[39mord\u001b[39;49m(x[\u001b[39m0\u001b[39;49m])))\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X14sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(sorted_book_count_name)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X14sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(sorted_book_count_name[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m])\n",
-      "\u001b[1;31mTypeError\u001b[0m: ord() expected a character, but string of length 8 found"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "book_dict = {}\n",
     "\n",
@@ -301,7 +281,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "book_dict = {}\n",
+    "\n",
+    "for _ in "
+   ]
   }
  ],
  "metadata": {
