--- a/boj_2039.ipynb
+++ b/boj_2039.ipynb
@@ -35,25 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[20, 7, 23, 19, 10, 15, 25, 8, 13]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'sort'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_2039.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2039.ipynb#W3sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m combinations(dwarfs, \u001b[39m7\u001b[39m):\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2039.ipynb#W3sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39msum\u001b[39m(i) \u001b[39m==\u001b[39m \u001b[39m100\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2039.ipynb#W3sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m         true_dwarfs\u001b[39m.\u001b[39mappend(i\u001b[39m.\u001b[39;49msort())\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2039.ipynb#W3sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(true_dwarfs[\u001b[39m0\u001b[39m])\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'sort'"
+      "[20, 7, 23, 19, 10, 15, 25, 8, 13]\n",
+      "[7, 8, 10, 13, 19, 20, 23]\n"
      ]
     }
    ],
@@ -70,56 +60,58 @@
     "true_dwarfs = []\n",
     "for i in combinations(dwarfs, 7):\n",
     "    if sum(i) == 100:\n",
-    "        true_dwarfs.append(list(i).sort())\n",
+    "        i_list = list(i)\n",
+    "        i_list.sort()\n",
+    "        true_dwarfs.append(i_list)\n",
     "        \n",
     "print(true_dwarfs[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(20, 7) 27 None\n",
-      "(20, 23) 43 None\n",
-      "(20, 19) 39 None\n",
-      "(20, 10) 30 None\n",
-      "(20, 15) 35 None\n",
-      "(20, 25) 45 None\n",
-      "(20, 8) 28 None\n",
-      "(20, 13) 33 None\n",
-      "(7, 23) 30 None\n",
-      "(7, 19) 26 None\n",
-      "(7, 10) 17 None\n",
-      "(7, 15) 22 None\n",
-      "(7, 25) 32 None\n",
-      "(7, 8) 15 None\n",
-      "(7, 13) 20 None\n",
-      "(23, 19) 42 None\n",
-      "(23, 10) 33 None\n",
-      "(23, 15) 38 None\n",
-      "(23, 25) 48 None\n",
-      "(23, 8) 31 None\n",
-      "(23, 13) 36 None\n",
-      "(19, 10) 29 None\n",
-      "(19, 15) 34 None\n",
-      "(19, 25) 44 None\n",
-      "(19, 8) 27 None\n",
-      "(19, 13) 32 None\n",
-      "(10, 15) 25 None\n",
-      "(10, 25) 35 None\n",
-      "(10, 8) 18 None\n",
-      "(10, 13) 23 None\n",
-      "(15, 25) 40 None\n",
-      "(15, 8) 23 None\n",
-      "(15, 13) 28 None\n",
-      "(25, 8) 33 None\n",
-      "(25, 13) 38 None\n",
-      "(8, 13) 21 None\n"
+      "(20, 7) 27 [7, 20]\n",
+      "(20, 23) 43 [20, 23]\n",
+      "(20, 19) 39 [19, 20]\n",
+      "(20, 10) 30 [10, 20]\n",
+      "(20, 15) 35 [15, 20]\n",
+      "(20, 25) 45 [20, 25]\n",
+      "(20, 8) 28 [8, 20]\n",
+      "(20, 13) 33 [13, 20]\n",
+      "(7, 23) 30 [7, 23]\n",
+      "(7, 19) 26 [7, 19]\n",
+      "(7, 10) 17 [7, 10]\n",
+      "(7, 15) 22 [7, 15]\n",
+      "(7, 25) 32 [7, 25]\n",
+      "(7, 8) 15 [7, 8]\n",
+      "(7, 13) 20 [7, 13]\n",
+      "(23, 19) 42 [19, 23]\n",
+      "(23, 10) 33 [10, 23]\n",
+      "(23, 15) 38 [15, 23]\n",
+      "(23, 25) 48 [23, 25]\n",
+      "(23, 8) 31 [8, 23]\n",
+      "(23, 13) 36 [13, 23]\n",
+      "(19, 10) 29 [10, 19]\n",
+      "(19, 15) 34 [15, 19]\n",
+      "(19, 25) 44 [19, 25]\n",
+      "(19, 8) 27 [8, 19]\n",
+      "(19, 13) 32 [13, 19]\n",
+      "(10, 15) 25 [10, 15]\n",
+      "(10, 25) 35 [10, 25]\n",
+      "(10, 8) 18 [8, 10]\n",
+      "(10, 13) 23 [10, 13]\n",
+      "(15, 25) 40 [15, 25]\n",
+      "(15, 8) 23 [8, 15]\n",
+      "(15, 13) 28 [13, 15]\n",
+      "(25, 8) 33 [8, 25]\n",
+      "(25, 13) 38 [13, 25]\n",
+      "(8, 13) 21 [8, 13]\n"
      ]
     }
    ],
@@ -127,7 +119,19 @@
     "a = [20, 7, 23, 19, 10, 15, 25, 8, 13]\n",
     "\n",
     "for i in combinations(a, 2):\n",
-    "    print(i, sum(i), list(i).sort())"
+    "    i_list = list(i)\n",
+    "    i_list.sort()\n",
+    "    print(i, sum(i), i_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = (20,4,7)\n",
+    "list(a).sort()"
    ]
   }
  ],
