--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -164,13 +164,7 @@
       "pq[1] : [-5],   ans : 4\n",
       "String : 2,   Fret : 7\n",
       "pq[1] : [-7],   ans : 6\n",
-      "String : 2,   Fret : 4\n",
-      "pq[1] : [-4],   ans : 8\n",
-      "String : 1,   Fret : 5\n",
-      "pq[0] : [-5],   ans : 10\n",
-      "String : 1,   Fret : 3\n",
-      "pq[0] : [-3],   ans : 12\n",
-      "12\n"
+      "String : 2,   Fret : 4\n"
      ]
     }
    ],
@@ -218,6 +212,37 @@
    ],
    "source": [
     "pq[0], pq[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pq = [[] for _ in range(500_000)]\n",
+    "\n",
+    "N, P = map(int, input().split())\n",
+    "print(f\"N : {N}     P : {P}\")\n",
+    "print()\n",
+    "\n",
+    "ans = 0\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    String, Fret = map(int, input().split())    \n",
+    "    print(f\"String : {String},   Fret : {Fret}\") \n",
+    "    \n",
+    "    while pq[String-1]:\n",
+    "        if -Fret > min(pq[String-1]):\n",
+    "            hq.heappop(pq[String-1])\n",
+    "            ans += 1\n",
+    "        \n",
+    "    hq.heappush(pq[String-1], -Fret)\n",
+    "    ans += 1\n",
+    "    \n",
+    "    print(f\"pq[{String-1}] : {pq[String-1]},   ans : {ans}\")\n",
+    "            \n",
+    "print(ans)                       "
    ]
   }
  ],
