--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -216,10 +216,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N : 7     P : 15\n",
+      "\n",
+      "String : 1,   Fret : 5\n",
+      "pq[0] : [-5],   ans : 1\n",
+      "String : 2,   Fret : 3\n",
+      "pq[1] : [-3],   ans : 2\n",
+      "String : 2,   Fret : 5\n"
+     ]
+    }
+   ],
    "source": [
+    "import heapq as hq\n",
+    "\n",
     "pq = [[] for _ in range(500_000)]\n",
     "\n",
     "N, P = map(int, input().split())\n",
@@ -239,6 +255,64 @@
     "        \n",
     "    hq.heappush(pq[String-1], -Fret)\n",
     "    ans += 1\n",
+    "    \n",
+    "    print(f\"pq[{String-1}] : {pq[String-1]},   ans : {ans}\")\n",
+    "            \n",
+    "print(ans)                       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N : 7     P : 15\n",
+      "\n",
+      "String : 1,   Fret : 5\n",
+      "pq[0] : [-5],   ans : 1\n",
+      "String : 2,   Fret : 3\n",
+      "pq[1] : [-3],   ans : 2\n",
+      "String : 2,   Fret : 5\n",
+      "pq[1] : [-5, -3],   ans : 3\n",
+      "String : 2,   Fret : 7\n",
+      "pq[1] : [-7, -3, -5],   ans : 4\n",
+      "String : 2,   Fret : 4\n",
+      "pq[1] : [-4, -3],   ans : 7\n",
+      "String : 1,   Fret : 5\n",
+      "pq[0] : [-5, -5],   ans : 8\n",
+      "String : 1,   Fret : 3\n",
+      "pq[0] : [-3],   ans : 11\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq as hq\n",
+    "\n",
+    "pq = [[] for _ in range(500_000)]\n",
+    "\n",
+    "N, P = map(int, input().split())\n",
+    "print(f\"N : {N}     P : {P}\")\n",
+    "print()\n",
+    "\n",
+    "ans = 0\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    String, Fret = map(int, input().split())    \n",
+    "    print(f\"String : {String},   Fret : {Fret}\") \n",
+    "    \n",
+    "    for _ in range(len(pq[String-1])) :\n",
+    "        if -Fret > min(pq[String-1]):\n",
+    "            hq.heappop(pq[String-1])\n",
+    "            ans += 1\n",
+    "    \n",
+    "    if -Fret not in pq[String-1]:    \n",
+    "        hq.heappush(pq[String-1], -Fret)\n",
+    "        ans += 1\n",
     "    \n",
     "    print(f\"pq[{String-1}] : {pq[String-1]},   ans : {ans}\")\n",
     "            \n",
