--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -321,21 +321,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String : 1,   Fret : 5\n",
+      "String : 2,   Fret : 3\n",
+      "String : 2,   Fret : 5\n",
+      "String : 2,   Fret : 7\n",
+      "String : 2,   Fret : 4\n",
+      "String : 1,   Fret : 5\n",
+      "String : 1,   Fret : 3\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "import heapq as hq\n",
     "\n",
     "pq = [[] for _ in range(500_000)]\n",
-    "\n",
     "N, P = map(int, input().split())\n",
-    "\n",
     "ans = 0\n",
     "\n",
     "for _ in range(N):\n",
     "    String, Fret = map(int, input().split())    \n",
-    "    print(f\"String : {String},   Fret : {Fret}\") \n",
     "    \n",
     "    for _ in range(len(pq[String-1])) :\n",
     "        if -Fret > min(pq[String-1]):\n",
@@ -346,7 +358,7 @@
     "        hq.heappush(pq[String-1], -Fret)\n",
     "        ans += 1    \n",
     "               \n",
-    "print(ans)                       "
+    "print(ans)                   "
    ]
   }
  ],
